--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,14 @@
   </head>
   <body>
     <h1>Mini Message Board</h1>
-  <ul>
-    <% messages.forEach(message => { %>
+    <ul>
+      <% messages.forEach(message => { %>
       <li>
-        <strong><%= message.user %></strong>: 
-        <%= message.text %> 
+        <strong><%= message.user %></strong>: <%= message.text %>
         <em>(<%= message.added.toLocaleString() %>)</em>
       </li>
-    <% }) %>
-  </ul>
+      <% }) %>
     </ul>
+    <p><a href="/new">Add a new message</a></p>
   </body>
 </html>
